# hass-here-weather

./: .codespell  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  coverage.xml  hacs.json  info.md  pyproject.toml  requirements.txt
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: ci.yml
custom_components/here_weather/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  utils.py  weather.py
custom_components/here_weather/translations/: de.json  en.json
tests/: README.md  __init__.py  conftest.py  const.py  test_config_flow.py  test_init.py  test_sensor.py  test_weather.py
tests/fixtures/: astronomy.json  daily.json  daily_simple_forecasts.json  hourly.json  observation.json
