[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hass-here-weather"
version = "2.1.5"
description = "Homeassistant Custom Component for HERE Destination Weather API"
license = "MIT"
authors = ["Kevin Stillhammer <kevin.stillhammer@gmail.com>"]
readme = "README.md"
repository = "http://github.com/eifinger/hass-here-weather"
keywords = [
    "aiohttp",
    "asyncio",
    "here"
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
aiohere = "1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
blacken-docs = "^1.12.1"
coverage = {version = "^6.4.4", extras = ["toml"]}
bandit = "^1.7.4"
codecov = "2.1.12"
codespell = "^2.2.2"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.9.11"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.3.0"
flake8-markdown = "^0.3.0"
flake8-simplify = "^0.19.3"
mypy = "^0.971"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
pytest-cov = "^3.0.0"
pytest-homeassistant-custom-component = "^0.12.19"
pytest-mock = "^3.8.2"
pylint = "^2.15.5"
pyupgrade = "^3.2.0"
safety = "^2.1.1"
vulture = "^2.5"
yamllint = "^1.28.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov=custom_components tests"

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]

[tool.semantic_release]
version_source = "tag"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "custom_components/here_weather/manifest.json:\"version\": \"{version}\""
version_variable = "custom_components/here_weather/const.py:VERSION"
build_command = false
upload_to_repository = false
upload_to_release = false
branch = "main"
